# Civilization-V-drafter

./: Cargo.toml  LICENSE  README.md  civilizations.json
civilizations/: Cargo.toml
civilizations/src/: lib.rs
src/: main.rs
